# raml-testing

./: README.md  bruh.raml
host_swagger/: converted.json
strato-api/: .gitignore  Application.hs  Foundation.hs  Model.hs  README.md  Setup.hs  Versioning.hs  strato-api.cabal
strato-api/Handler/: AccountInfo.hs  AfterSubmission.hs  ApiDocs.hs  AppCreate.hs  BlkLast.hs  BlockInfo.hs  Coinbase.hs  Common.hs  Demo.hs  Developer.hs  ExtABI.hs  Faucet.hs  Filters.hs  Help.hs  Home.hs  JsonJuggler.hs  LogInfo.hs  Login.hs  PushTransaction.hs  QueuedTransactions.hs  Raml.hs  RegisterApp.hs  Solc.hs  SolidityCommon.hs  Stats.hs  StorageInfo.hs  Test.hs  Transaction.hs  TransactionDemo.hs  TransactionResult.hs  Tutorial.hs  TxLast.hs  Version.hs  Wallet.hs
strato-api/Import/: NoFoundation.hs
strato-api/apidocs/: index.html
strato-api/config/: priv  routes.raml  routes.static  settings.yml  test-settings.yml
strato-api/static/: help.html  help.md  testreport.html  tutorial.html
strato-api/static/css/: address-explorer.css  colors.scss
strato-api/static/images/favicon/: browserconfig.xml  manifest.json
strato-api/static/js/: blockapps-min.js
strato-api/static/resources/sass/: colors.scss
strato-api/templates/: afterSubmission.cassius  afterSubmission.hamlet  afterSubmission.julius  afterSubmission.julius.orig  appCreate.hamlet  appCreateSuccess.hamlet  appRegister.hamlet  appRegister.julius  contract.hamlet  contractEdit.hamlet  contractEdit.julius  contractFuncDiv.hamlet  contractFuncDiv.julius  default-layout-wrapper.hamlet  help.hamlet  help.julius  homepage.hamlet  homepage.julius  homepage.lucius  stats.hamlet  stats.julius  transactionDemo.hamlet  transactionDemo.julius  transactionDemo.lucius  tutorial.hamlet  tutorial.julius  tutorial.lucius  userRegister.hamlet  utils.hamlet  utils.julius  wallet.hamlet
strato-api/test/: Main.hs  Spec.hs  TestImport.hs
strato-api/test/Handler/: CommonSpec.hs  HomeSpec.hs  JsonSpec.hs
strato-api/test/Hspec/Formatters/: Blaze.hs
